fix: align styling with other pages

--- a/src/component/Reporting/ReportCard/ReportCard.module.scss
+++ b/src/component/Reporting/ReportCard/ReportCard.module.scss
@@ -2,6 +2,8 @@
     width: 100%;
     padding: var(--card-padding);
     margin: var(--card-margin-y) 0;
+    border-radius: 10px;
+    box-shadow: none;
 }
 
 .header {
