--- a/src/component/Reporting/ReportToggleList/ReportToggleList.module.scss
+++ b/src/component/Reporting/ReportToggleList/ReportToggleList.module.scss
@@ -1,6 +1,8 @@
 .reportToggleList {
     width: 100%;
     margin: var(--card-margin-y) 0;
+    border-radius: 10px;
+    box-shadow: none;
 }
 
 .bulkAction {
